Added menu action for displaying where the user is on the map.

--- a/app/res/menu/bootstrap.xml
+++ b/app/res/menu/bootstrap.xml
@@ -10,4 +10,11 @@
             android:title="@string/refresh_action">
     </item>
 
+    <item
+            android:id="@+id/show_my_location"
+            android:icon="@drawable/location_place"
+            android:showAsAction="ifRoom"
+            android:title="@string/show_my_location">
+    </item>
+
 </menu>
