--- a/app/res/menu/bootstrap.xml
+++ b/app/res/menu/bootstrap.xml
@@ -12,9 +12,16 @@
 
     <item
             android:id="@+id/show_my_location"
-            android:icon="@drawable/location_place"
+            android:icon="@drawable/ic_location_place"
             android:showAsAction="ifRoom"
             android:title="@string/show_my_location">
     </item>
+
+    <item
+            android:id="@+id/menu_search"
+            android:title="@string/menu_search"
+            android:icon="@drawable/ic_action_search"
+            android:showAsAction="ifRoom|collapseActionView"
+            android:actionViewClass="android.widget.SearchView"/>
 
 </menu>
