--- a/app/res/menu/bootstrap.xml
+++ b/app/res/menu/bootstrap.xml
@@ -17,11 +17,18 @@
             android:title="@string/show_my_location">
     </item>
 
+
     <item
             android:id="@+id/menu_search"
             android:title="@string/menu_search"
             android:icon="@drawable/ic_action_search"
             android:showAsAction="ifRoom|collapseActionView"
             android:actionViewClass="android.widget.SearchView"/>
+
+    <item
+            android:id="@+id/menu_signup"
+            android:title="@string/menu_signup"
+            android:icon="@drawable/abs__ic_clear"
+            android:showAsAction="ifRoom"/>
 
 </menu>
