--- a/app/res/layout/carousel_view.xml
+++ b/app/res/layout/carousel_view.xml
@@ -1,54 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SlidingPaneLayout
+              xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res/org.nsdev.apps.transittamer"
+              android:id="@+id/sliding_pane_layout"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-              android:animateLayoutChanges="true"
-              android:id="@+id/ll_carousel_layout"
-              android:background="@color/pager_background"
-              android:orientation="vertical">
+              >
 
-    <com.viewpagerindicator.TitlePageIndicator
-            android:id="@+id/tpi_header"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            textColor="@color/text_light"
-            android:background="@drawable/stripe_repeat"
-            app:clipPadding="10dp"
-            app:footerColor="@color/pager_footer"
-            app:footerIndicatorHeight="5dp"
-            app:footerIndicatorStyle="triangle"
-            app:footerLineHeight="4dp"
-            app:selectedBold="true"
-            app:selectedColor="@color/pager_selected_text"
-            app:titlePadding="10dp"/>
+    <RelativeLayout
+            android:layout_width="400dp"
+            android:layout_height="match_parent"
+            >
 
-    <android.support.v4.view.ViewPager
-            android:id="@+id/vp_pages"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2"
-            />
+        <com.viewpagerindicator.TitlePageIndicator
+                android:id="@+id/tpi_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                textColor="@color/text_light"
+                android:background="@drawable/stripe_repeat"
+                app:clipPadding="10dp"
+                app:footerColor="@color/pager_footer"
+                app:footerIndicatorHeight="5dp"
+                app:footerIndicatorStyle="underline"
+                app:footerLineHeight="4dp"
+                app:selectedBold="true"
+                app:selectedColor="@color/pager_selected_text"
+                app:titlePadding="10dp"/>
 
-    <View
-            android:id="@+id/v_sep"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="#000"
-            />
-
-    <FrameLayout
-            android:id="@+id/fl_map_layout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.5">
-
-        <fragment
-                android:name="com.google.android.gms.maps.SupportMapFragment"
-                android:id="@+id/smf_map"
+        <android.support.v4.view.ViewPager
+                android:id="@+id/vp_pages"
+                android:layout_below="@+id/tpi_header"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 />
-    </FrameLayout>
+    </RelativeLayout>
 
-</LinearLayout>
+    <fragment
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:id="@+id/smf_map"
+            android:layout_width="500dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            />
+
+</android.support.v4.widget.SlidingPaneLayout>
